2007-07-04  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c: (phonemgr_listener_class_init),
	(phonemgr_listener_emit_status),
	(phonemgr_listener_emit_call_status),
	(phonemgr_listener_emit_message), (phonemgr_listener_new),
	(phonemgr_listener_finalize), (phonemgr_listener_push),
	(phonemgr_listener_new_sms_cb), (phonemgr_listener_poll_real):
	* libgsm/phonemgr-listener.h:
	* libgsm/phonemgr-marshal.list:
	* libgsm/phonemgr-utils.c: (gn_timestamp_to_gtime):
	* libgsm/phonemgr-utils.h: Add framework for call status reporting,
	no actual call polling right now

2007-07-04  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c: (phonemgr_listener_emit_status):
	* libgsm/phonemgr-listener.h:
	* libgsm/phonemgr-utils.c: (phonemgr_utils_driver_parse_start_tag):
	* src/app.h:
	* src/connection.c: (set_connection_device), (on_message):
	* src/e-phone-entry.c: (e_phone_entry_new_from_glade):
	* src/e-phone-entry.h:
	* src/icon.c: (load_icon):
	* src/menu.c: (about_activated):
	* src/ui.c: (boldify_label), (get_ui), (get_resource),
	(idle_play_alert), (get_current_btname), (set_dependent_widget),
	(on_conn_port_change), (set_btdevname), (populate_prefs),
	(choose_bdaddr), (set_send_sensitivity), (send_message),
	(create_send_dialog): Kill gint and gchar

2007-07-04  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c: (phonemgr_listener_push),
	(phonemgr_listener_new_sms_cb),
	(phonemgr_listener_sms_notification_poll),
	(phonemgr_listener_set_sms_notification),
	(phonemgr_listener_thread), (phonemgr_listener_set_time),
	(phonemgr_listener_poll_real):
	* libgsm/phonemgr-listener.h:
	Add support for out-of-band notification, requires gnokii patch from
	http://thread.gmane.org/gmane.linux.drivers.gnokii/8941/focus=8956
	to allow user_data parameter to the callbacks (Closes: #453656)

2007-07-03  Bastien Nocera  <hadess@hadess.net>

	* libgsm/glibgsmtest.c: (message), (main):
	* libgsm/phonemgr-listener.c: (gn_timestamp_to_gtime),