@@ -43,8 +43,10 @@ typedef enum {
 
 typedef enum {
 	PHONEMGR_LISTENER_CALL_INCOMING,
+	PHONEMGR_LISTENER_CALL_ONGOING,
 	PHONEMGR_LISTENER_CALL_HANGUP,
-	PHONEMGR_LISTENER_CALL_IDLE
+	PHONEMGR_LISTENER_CALL_IDLE,
+	PHONEMGR_LISTENER_CALL_UNKNOWN
 } PhonemgrListenerCallStatus;
 
 typedef struct _PhonemgrListener PhonemgrListener;
