@@ -1,3 +1,15 @@
+2007-07-05  Bastien Nocera  <hadess@hadess.net>
+
+	* libgsm/phonemgr-listener.c: (phonemgr_listener_new_call_cb),
+	(phonemgr_listener_sms_notification_soft_poll),
+	(phonemgr_listener_call_notification_poll),
+	(phonemgr_listener_set_sms_notification),
+	(phonemgr_listener_set_call_notification),
+	(phonemgr_listener_thread),
+	(phonemgr_listener_sms_notification_real_poll):
+	* libgsm/phonemgr-listener.h: Update to compile with current gnokii
+	CVS HEAD, add some bits of calls notification API
+
 2007-07-04  Bastien Nocera  <hadess@hadess.net>
 
 	* libgsm/phonemgr-listener.c: (phonemgr_listener_class_init),
